--- a/resale/css/resale.scss
+++ b/resale/css/resale.scss
@@ -424,6 +424,11 @@ main内section
         &::before {
           content: "※";
         }
+      &.nakaguro {
+        padding-left: 1.5em;
+        &::before {
+          content: "・";
+        }
       }
     }
   }
